--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "test": "grunt nodeunit"
   },
-  "devDependencies": {
+  "dependencies": {
     "colors": "^0.6.2",
     "commander": "^2.2.0",
     "grunt": "~0.4.5",
